force-app/main/default/objects/WorkOrderLineItem/fields/FSM_Longitude__c.field-meta.xml
<CustomField>
    <fullName>FSM_Longitude__c</fullName>
    <description>Created for SFS-244</description>
    <formula>Longitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>