force-app/main/default/objects/WorkOrderLineItem/fields/FSM_MandatoryforDispatch__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryforDispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-62</description>
    <label>Mandatory for Dispatch</label>
    <type>Checkbox</type>
</CustomField>