force-app/main/default/objects/WorkOrderLineItem/fields/FSM_MandatoryforScheduling__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryforScheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-110</description>
    <label>Mandatory for Scheduling</label>
    <type>Checkbox</type>
</CustomField>