force-app/main/default/objects/WorkOrderLineItem/fields/FSM_PRTNameCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_PRTNameCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of SFS-1923</description>
    <label>PRT Name/Code</label>
    <referenceTo>FSM_SchedulingPreRequisites__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>WorkOrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>